--- a/01mongodb/mongodb-configmap.yaml
+++ b/01mongodb/mongodb-configmap.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: mongodb-configmap
 data:
+  # The name of the service, under metadata.name
   database_url: mongodb-service
